--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="home_page.css" rel="stylesheet">
+    <link href="code/home_page.css" rel="stylesheet">
   </head>
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
